[tool.poetry]
name = "analog-clock"
version = "0.1.0"
description = "A simle analog clock"
authors = ["Kirill Artemov <kaartemov@gmailS.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "analog-clock"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
analog-clock = "analog-clock.analogclock:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"